<resources>
    <string name="app_name">Pill Time</string>
    <string name="med_name">Name</string>
    <string name="max">max</string>
    <plurals name="max_dose_per_hour">
        <item quantity="one">max %1$d / h</item>
        <item quantity="other">max %1$d / %2$d h</item>
    </plurals>
    <plurals name="max_dose_per_day">
        <item quantity="one">max %1$d / day</item>
        <item quantity="other">max %1$d / %2$d days</item>
    </plurals>
    <string name="every">every</string>
    <string name="hour_or_day">hour or day</string>
    <string name="default_doses">Amount normally taken:</string>
    <string name="new_med">New Med</string>
    <string name="history">History</string>
    <plurals name="taken_in_past_hours">
        
        <item quantity="one">%1$s taken in the past hour</item>
        <item quantity="other">%1$s taken in past %2$d hours</item>
    </plurals>
    <plurals name="taken_in_past_days">
        <item quantity="one">%1$s taken over the past day</item>
        <item quantity="other">%1$s taken over past %2$d days</item>
    </plurals>
    <string name="edit_dose_title">Edit %1$s dose</string>
    <string name="edit_med_title">Edit %1$s</string>
    <string name="dose_history">Dose history</string>
    <string name="med">Med</string>
    <string name="amount_taken">Amount Taken</string>
    <string name="decrease_amount_taken">Decrease amount taken</string>
    <string name="increase_amount_taken">Increase amount taken</string>
    <string name="new_dose">New Dose</string>
    <string name="new_dose_title">New %1$s dose</string>
    <string name="dose_taken_at">Taken at</string>
    <string name="dose_taken_at_time">Taken at time</string>
    <string name="dose_taken_on_date">Taken on date</string>
    <plurals name="expires">
        <item quantity="one">%1$s expires %2$s</item>
        <item quantity="other">%1$s expire %2$s</item>
    </plurals>
    <plurals name="expired">
        <item quantity="one">%1$s expired %2$s</item>
        <item quantity="other">%1$s expired %2$s</item>
    </plurals>
    <string name="time_on_date">%1$s on %2$s</string>
    <string name="notification_public_title">A dose expired</string>
    <string name="notification_private_title">%1$s dose expired</string>
    <string name="time_past_ago">%1$s ago</string>
    <string name="time_future_in">in %1$s</string>
    <string name="seconds">seconds</string>
    <string name="seconds_short">s</string>
    <string name="minutes">minutes</string>
    <string name="minutes_short">m</string>
    <string name="hours">hours</string>
    <string name="hours_short">h</string>
    <string name="days">days</string>
    <string name="days_short">d</string>
    <string name="weeks">weeks</string>
    <string name="weeks_short">w</string>
    <string name="months">months</string>
    <string name="months_short">M</string>
    <string name="years">years</string>
    <string name="years_short">y</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="more_options">More Options</string>
    <string name="dialog_clear_db">Are you sure you want to permanently delete all meds and dose history? This cannot be undone.</string>
    <string name="dialog_repair_db">Before attempting to repair your database, you should back up your data using the export feature. Press "Cancel" to go back, or "Repair" to repair the database now.</string>
    <string name="dialog_delete_medication">Are you sure you want to delete this medication? This also deletes all doses entered for this medication. This cannot be undone.</string>
    <string name="dialog_delete_dose">Are you sure you want to delete this dose? This cannot be undone.</string>
    <string name="dialog_delete_dose_and_older">Are you sure you want to delete this dose and all older ones for this medication? This cannot be undone.</string>
    <string name="settings">Settings</string>
    <string name="repair">Repair</string>
    <string name="repair_db">Repair database</string>
    <string name="repair_db_description">Can be used if errors appear when using the app</string>
    <string name="clear_db">Clear all data</string>
    <string name="clear_meds_and_doses">Deletes all meds and dose history from your device</string>
    <string name="notifications_header">Notification Defaults</string>
    <string name="notifications_description">You can also set default notification preferences for each med, and you can change the notification settings for each dose.</string>
    <string name="notify_expiring_dose">Show a notification when dose expires</string>
    <string name="notification_sound">Make a sound with the notification</string>
    <string name="show_day_dose_count">Also show the number of doses taken over the past 24 hours on the history page for this med?</string>
    <string name="override_global_notify_defaults">Use custom default notification preferences for this med? (You can still change the notification settings for each dose.)</string>
    <string name="track_inventory">Track your personal inventory for this med?</string>
    <string name="reported_inventory">doses currently left in stock</string>
    <string name="inventory_reported_at">Remaining doses last recorded %1$s</string>
    <string name="inventory">%1$s left in stock</string>
    <string name="toast_dose_saved">Dose saved</string>
    <string name="toast_med_saved">Med saved</string>
    <string name="toast_error_importing_database">Error importing database</string>
    <string name="toast_data_imported">Data imported</string>
    <string name="toast_error_exporting_database">Error exporting database</string>
    <string name="toast_data_exported">Data exported</string>
    <string name="toast_database_cleared">Database cleared</string>
    <string name="toast_database_repaired">Database repaired</string>
    <string name="interface_header">Interface</string>
    <string name="theme_header">Theme</string>
    <string name="theme_entry_light">Light</string>
    <string name="theme_entry_dark">Dark</string>
    <string name="theme_entry_system_default">System default</string>
    <string name="theme_entry_auto_battery">Auto battery</string>
    <string name="theme_value_light" translatable="false">MODE_NIGHT_NO</string>
    <string name="theme_value_dark" translatable="false">MODE_NIGHT_YES</string>
    <string name="theme_value_system_default" translatable="false">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="theme_value_auto_battery" translatable="false">MODE_NIGHT_AUTO_BATTERY</string>
    <string name="med_sort_header">Med Sort Order</string>
    <string name="med_sort_entry_latest">Last Taken</string>
    <string name="med_sort_entry_alpha">Alphabetical</string>
    <string name="med_sort_value_latest" translatable="false">latest</string>
    <string name="med_sort_value_alpha" translatable="false">alpha</string>
    <string name="color">Color</string>
    <string name="set_med_color">Set med color</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="amber">Amber</string>
    <string name="yellow">Yellow</string>
    <string name="lime">Lime</string>
    <string name="green">Green</string>
    <string name="emerald">Emerald</string>
    <string name="teal">Teal</string>
    <string name="cyan">Cyan</string>
    <string name="sky">Sky</string>
    <string name="blue">Blue</string>
    <string name="indigo">Indigo</string>
    <string name="violet">Violet</string>
    <string name="purple">Purple</string>
    <string name="fuchsia">Fuchsia</string>
    <string name="pink">Pink</string>
    <string name="rose">Rose</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer_1">This app does not provide any medical advice, implied or otherwise. All information provided by the app is based only on user input and does not constitute a recommendation of any kind. All medical decisions should always be taken in consultation with medical professionals.</string>
    <string name="disclaimer_2">This is a simple app made for personal use. It cannot be relied upon for any health-related purposes. Because of technical limitations and known issues, it cannot be guaranteed to provide notifications at specific times. (For example, restarting the phone may disable scheduled notifications from this app.)</string>
    <string name="dev_decree_title">Notice</string>
    <string name="dev_decree_notice">Google is trying to stop you from installing apps like this one on your device. Visit keepandroidopen.org to learn more.</string>
    <string name="keep_android_open">keepandroidopen.org</string>
    <string name="learn_more">Learn More</string>
    <string name="close">Close</string>
    <string name="no_meds">No meds found.</string>
    <string name="add_med">Add a Med</string>
    <string name="no_doses">No doses taken.</string>
    <string name="add_dose">Add a dose</string>
    <string name="show_more">Show More</string>
    <string name="taken">taken %1$s</string>
    <string name="channel_name">Expired Dose Notifications</string>
    <string name="channel_description">Notifications when doses expire</string>
    <string name="delete_and_older">Delete this and older</string>
    <string name="data">Data</string>
    <string name="export_all">Export all data</string>
    <string name="export_all_summary">Creates a file that can be imported on any device</string>
    <string name="import_data">Import data</string>
    <string name="import_from_file">Requires a text file on your device, exported from this app\n(Does NOT overwrite existing data)</string>
    <string name="last_taken">last taken %1$s</string>
    <string name="never">never</string>
    <string name="about_app">About Pill Time</string>
    <string name="changelog_title">What\'s New</string>
    <string name="info_link_title">Source code and more info available on GitHub</string>
    <string name="translation_link_title">Help translate this app</string>
    <string name="welcome_dialog_title">New Features</string>
    <string name="welcome_dialog_content">
        v20: If you see errors, try repairing your db on the Settings page.\n
        \nNEW in v19: You can now set notification defaults for each med.\n
        \nFrom v18: Sort meds by date taken or in alphabetical order. (See Settings page)\n
        \nFrom v13: You can now long-press the + button next to each med on the main screen to quickly add a new dose.\n
        \nNOTE: Google is trying to stop you from installing apps like this one on your device. Visit keepandroidopen.org to learn more.
    </string>
    <string name="error_intro">Error:</string>
    <string name="database_error">Could not save to database</string>
    <string name="invalid_data">Invalid data</string>
    <string name="med_save_error">Error saving med:</string>
    <string name="name_required">Name required</string>
    <string name="invalid_max_dose">Invalid max dose</string>
    <string name="invalid_dose_hours">Invalid dose period</string>
    <string name="color_required">Color required</string>
    <string name="color_not_found">Invalid color</string>
    <string name="invalid_reported_inventory">Invalid reported inventory</string>
    <string name="invalid_default_dose_count">Invalid default dose amount</string>
    <string name="dose_save_error">Error saving dose:</string>
    <string name="invalid_med_id">Invalid med ID</string>
    <string name="invalid_dose_count">Invalid dose amount</string>
    <string name="invalid_dose_datetime">Invalid date</string>
</resources>