<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        tools:context=".meds.EditMedActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_editMed_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/bottom_offset_dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_editMed_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_editMed_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:minHeight="48dp"
                    android:hint="@string/med_name"
                    android:importantForAutofill="no"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/ll_editMed_doseInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_editMed_name"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max"
                    android:textColor="?attr/colorPrimary"
                    android:labelFor="@+id/np_editMed_maxDose"/>

                <NumberPicker
                    android:id="@+id/np_editMed_maxDose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/every"
                    android:labelFor="@id/sp_editMed_daysHours"
                    android:textColor="?attr/colorPrimary" />

                <NumberPicker
                    android:id="@+id/np_editMed_doseHoursDays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/sp_editMed_daysHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hour_or_day"
                    android:minHeight="48dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_editMed_defaultDoseCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_editMed_doseInfo"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_doses"
                    android:labelFor="@id/np_editMed_defaultDoseCount"
                    android:textColor="?attr/colorPrimary" />

                <NumberPicker
                    android:id="@+id/np_editMed_defaultDoseCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp" />

            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_editMed_showDayDoseCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:switchPadding="12dp"
                android:text="@string/show_day_dose_count"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_editMed_defaultDoseCount" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_editMed_overrideGlobalNotifyDefaults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:switchPadding="12dp"
                android:text="@string/override_global_notify_defaults"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_editMed_showDayDoseCount" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_editMed_notifyDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:switchPadding="12dp"
                android:text="@string/notify_expiring_dose"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_editMed_overrideGlobalNotifyDefaults" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_editMed_notifySoundDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:switchPadding="12dp"
                android:text="@string/notification_sound"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_editMed_notifyDefault" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_editMed_trackInventory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:switchPadding="12dp"
                android:text="@string/track_inventory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_editMed_notifySoundDefault" />

            <LinearLayout
                android:id="@+id/ll_editMed_trackInventory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_editMed_trackInventory"
                android:gravity="center_vertical"
                android:visibility="visible" >

                <NumberPicker
                    android:id="@+id/np_editMed_currentInventory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reported_inventory"
                    android:labelFor="@id/np_editMed_currentInventory"
                    android:textColor="?attr/colorPrimary" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_editMed_inventoryReportedAt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_editMed_trackInventory"
                android:textColor="?attr/lightText"
                android:text="@string/inventory_reported_at"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/tv_editMed_colorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_weight="0"
                android:text="@string/color"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_editMed_inventoryReportedAt" />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow_editMed_colors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:paddingBottom="24dp"
                app:flow_horizontalGap="12dp"
                app:flow_verticalGap="12dp"
                app:flow_wrapMode="aligned"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_editMed_colorLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_editMed_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:icon="@drawable/ic_baseline_check_24"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>